--- a/FlightUI Angular/src/app/components/nav-bar/nav-bar.component.html
+++ b/FlightUI Angular/src/app/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
     <a class="active" routerLink="/">Home</a>
     <a routerLink="/vendor-page">Vendor Home</a>
     <a routerLink="/all-vendor">All Flights</a>
-    <a routerLink="/booking-confirmation">Booking Confirmation</a>
+    <a routerLink="/bookings">Bookings</a>
     <div class="search-container">
       <form action="/action_page.php">
         <input type="text" placeholder="Search.." name="search">
